--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ input[type="text"] {
   padding-top: 20px;
   color: #ffffff;
   background-color: #333333;
-  border: 1px solid #ccc;
+  border: 0;
   border-radius: 4px;
   overflow-y:scroll;
   outline: 0;
@@ -68,7 +68,7 @@ input[type="text"] {
 }
 
 #response::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Background color of the track */
+  background-color: #f1f1f110; /* Background color of the track */
 }
 
 #response::-webkit-scrollbar-thumb {
